--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.3.3",
     "react": "^16.13.1",
